<resources>
    <string name="app_name">Sabot Community</string>
    <string name="login_text">Login</string>
    <string name="username_text">Username</string>
    <string name="nickname_text">Nickname</string>
    <string name="email_text_reg">Email Address</string>
    <string name="register_new_account">Register New Account</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="welcome">Welcome</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_publics">Publics</string>
    <string name="postsTextProfile">Posts</string>
    <string name="followingTextProfile">Following</string>
    <string name="detailsTextProfile">Details</string>
    <string name="likesText">Likes</string>
    <string name="title_posts">Posts</string>
    <string name="title_ratings">Reviews</string>
    <string name="title_about">About</string>
    <string name="player_rating_review">Player Rating/Review</string>
    <string name="tell_us_about_this_player">Tell us about this player…</string>
    <string name="submit_review">Submit Review</string>
    <string name="great">Great!</string>
    <string name="bad">Bad</string>
    <string name="cusi">Could use some improvement</string>
    <string name="average">Average</string>
    <string name="good">Good</string>
    <string name="what_are_you_playing">Let your followers know what you\'re up to…</string>
    <string name="submit">Submit</string>
    <string name="nav_publics">Publics</string>
    <string name="comments">Comments</string>
    <string name="time_message">A little while ago</string>
    <string name="action_follow">Follow</string>
    <string name="label_followers">Followers</string>
    <string name="label_publics">Publics Posts</string>
    <string name="label_reviews">Reviews</string>
    <string name="new_post">New Post</string>
    <string name="edit">Edit</string>
    <string name="add_friend">Connect</string>
    <string name="follow">Follow</string>
    <string name="send_message">Send Message</string>
    <string name="more">More</string>
    <string name="profile_information_only_for_friends">Profile information is available only for connections.</string>
    <string name="see_all">See All</string>
    <string name="error">Error</string>
    <string name="account_disabled">Account Disabled</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="upload_image">Upload Image</string>
    <string name="uploading">Uploading…</string>
    <string name="player_reviews">Player Reviews</string>
    <string name="ratings_and_reviews">Ratings and Reviews</string>
    <string name="game_reviews">Game Reviews</string>
    <string name="action_followed">Following</string>
    <string name="friend">Connected</string>
    <string name="requested">Requested</string>
    <string name="bio">Bio</string>
    <string name="tell_us_what_you_think_of_this_game">Tell us what you think of this game…</string>
    <string name="game_rating_review">Game Rating/Review</string>
    <string name="posttype_prompt">Choose a post type…</string>
    <string name="contacttype_prompt">Choose a reason for contact…</string>
    <string name="when_prompt">Choose a time…</string>
    <string name="we_re_excited_to_have_you_back">Sign in to start dominating the randoms!</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="messages">Messages</string>
    <string name="account_settings">Account Settings</string>
    <string name="no_internets">No internets!</string>
    <string name="connect_to_review_this_player">Connect to review this player!</string>
    <string name="no_reviews">No reviews!</string>
    <string name="connections">Connections</string>
    <string name="loading">Loading…</string>
    <string name="request_sent">Sent</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="title_chat_requests">Requests</string>
    <string name="title_chat_inbox">Inbox</string>
    <string name="reviews">Reviews</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="search">Search…</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="input_your_email_and_username_and_we_ll_send_you_a_link_to_reset_your_password">Input your Email and Username and we\'ll send you a link to reset your password!</string>
    <string name="recover">Recover</string>
    <string name="members">Members</string>
    <string name="clans">Clans</string>
    <string name="support">Support</string>
    <string name="contact">Contact Us</string>
    <string name="followed_clans">Joined Clans</string>
    <string name="not_following_clans">Not a member of any clans! Why not create one?</string>
    <string name="label_events">Events</string>
    <string name="label_join">Join</string>
    <string name="label_joined">Joined</string>
    <string name="searches">Searches</string>
    <string name="clan_name_string">Clan Name</string>
    <string name="clan_tag_string">[CLANTAG]</string>
    <string name="start_new_clan">Start New Clan</string>
    <string name="submit_clan">Submit New Clan</string>
    <string name="new_clan_start">Start New Clan</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="follow_to_review_this_game">Follow to review this game!</string>
    <string name="manage_members">Manage Members</string>
    <string name="clan_name">Clan Name</string>
    <string name="reason_for_contact">Reason for contact:</string>
    <string name="etsubject">Subject…</string>
    <string name="etsubject2">Subject… (up to 30 characters)</string>
    <string name="etdescription">Description…</string>
    <string name="clan_tag">Clan Tag</string>
    <string name="other">Other…</string>
    <string name="other2">Other</string>
    <string name="clan_reviews">Clan Reviews</string>
    <string name="become_a_member_to_review_this_clan">Become a member to review this clan!</string>
    <string name="accept">Accept</string>
    <string name="remove">Remove</string>
    <string name="no_member_requests">No Member Requests!</string>
    <string name="no_posts_to_show">No posts to show!</string>
    <string name="no_messages_to_show">No messages to show!</string>
    <string name="requests">Requests</string>
    <string name="new_publics">New Publics</string>
    <string name="new_topic">New Topic</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="platform">Platform:</string>
    <string name="when">When:</string>
    <string name="players_needed">Players needed (excluding yourself):</string>
    <string name="players">players</string>
    <string name="when_colon">When:</string>
    <string name="steam">Steam</string>
    <string name="back">Back</string>
    <string name="purchasealterdialog">You\'re leaving Sabot Community and opening this games\'s purchase link.\n\nChoose a method:</string>
    <string name="lfgonly">Submitting here is strictly for LFG (Looking For Group) purposes only.</string>
    <string name="join_request_accepted">Join Request Accepted!</string>
    <string name="join_requested">Join Requested!</string>
    <string name="request_to_join">Request to join</string>
    <string name="manage_requests">Manage Requests</string>
    <string name="no_join_requests">No join requests!</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="leave_publics_topic">Opt out of event?</string>
    <string name="leave_publics_topic_requested">Remove request to join?</string>
    <string name="you_cannot_respond_to_this_message">You cannot respond to this message…</string>
    <string name="write_message">Write message</string>
    <string name="please_select_a_rating">Please select a rating!</string>
    <string name="title">Title…</string>
    <string name="review_text">Review</string>
    <string name="please_select_a_rating_et">Please select a rating!</string>
    <string name="comment_et">Comment…</string>
    <string name="follow_to_view_publics">Follow To View Publics Posts And Chatroom</string>
    <string name="delete_topic">Delete Topic</string>
    <string name="post_deleted">Post deleted</string>
    <string name="no_members">No members!</string>
    <string name="view_player">View Player</string>
    <string name="report_top_text">Having a problem with a user, Publics, or clan? Anonymously submit a complaint here.</string>
    <string name="inappro_clan_name">Clans with inappropriate names, tag, or description will be removed</string>
    <string name="clan_name_dot">Clan name…</string>
    <string name="clan_description_dot">Clan description…</string>
    <string name="current_publics">Current Publics</string>
    <string name="close_account">Close Account</string>
    <string name="closing_account">Disabling account, re-open account by signing back in.\n\nContinue?</string>
    <string name="user_closed">User Closed!</string>
    <string name="could_not_close_account">Error: could not close account, please contact us about this error!</string>
    <string name="no_content">No content!</string>
    <string name="platform_filter">Platform Filter</string>
    <string name="selected_platform">Selected Platform:</string>
    <string name="no_current_publics">No Current Publics!\nBe seen here when you post</string>
    <string name="no_current_publics_cont">looking for new players!</string>
    <string name="registered_title">Thank you for registering!</string>
    <string name="registered_desc">You\'re only a few clicks away from meeting new players!\n\nWould you like to build your profile now?</string>
    <string name="yes">Yes</string>
    <string name="filter">Filter:</string>
    <string name="save_settings_query">Save current settings?</string>
    <string name="leaving_account_settings">You\'re leaving account settings! Would you like to save your current settings?</string>
    <string name="no">No</string>
    <string name="nothing_to_show">Nothing to show!</string>
    <string name="clan_posts">Clan Posts</string>
    <string name="profile_posts">Profile Posts</string>
    <string name="publics_posts_text">Publics Posts</string>
    <string name="new_to_sabot_community_text">New to Sabot Community?</string>
    <string name="take_our_3_minute_walk_through_text">Take our 3 minute walk-through!</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="chat_room_publics">Chat Room</string>
    <string name="previous_publics_text">Previous Publics</string>
    <string name="last_reply_text">Last Reply:</string>
    <string name="game_unfollow">Game Unfollow</string>
    <string name="unfollow">Unfollow</string>
    <string name="others_text">Others</string>
    <string name="last_notification_text">Last Notification:</string>
    <string name="publics_frequency_text">Publics Push Notification Frequency</string>
    <string name="publics_noti_info_message">How often you\'ll receive push notifications when someone posts a new Publics topic for a game you follow.</string>
    <string name="merch">Merch</string>
    <string name="mute_conversation">(Un)Mute Conversation</string>
    <string name="players_added">Players Added</string>
    <string name="group_options">Group Options</string>
    <string name="invite_players">Invite Players</string>
    <string name="leave_group">Leave Group</string>
</resources>