<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mute_convo"
            android:icon="@drawable/ic_friend_cancel"
            android:title="@string/mute_conversation" />
        <item
            android:id="@+id/players_added"
            android:icon="@drawable/ic_profile"
            android:title="@string/players_added" />
        <item
            android:id="@+id/invite_players"
            android:icon="@drawable/ic_plus_profile"
            android:title="@string/invite_players" />
        <item
            android:id="@+id/group_options"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/group_options" />
        <item
            android:id="@+id/leave_group"
            android:icon="@drawable/ic_chevron_left_24dp"
            android:title="@string/leave_group" />

    </group>

    <!--<item android:title="@string/others_text">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_action_profile"
                android:title="@string/title_profile" />
            <item
                android:id="@+id/nav_publics"
                android:icon="@drawable/ic_group_add_black_24dp"
                android:title="@string/title_publics" />
            <item
                android:id="@+id/nav_clans"
                android:icon="@drawable/ic_action_groups"
                android:title="@string/clans" />
        </menu>
    </item>-->

    <!--<item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_messages_24dp"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_merch"
                android:icon="@drawable/ic_launcher_trans"
                android:title="@string/merch" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_report"
                android:title="@string/title_about" />
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/icons8_donate_50"
                android:title="@string/donate" />
        </menu>
    </item>-->

</menu>