<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/snippet_top_report" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/reportDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/report_top_text"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/reason_for_contact"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/reportSpinner"
                    style="dark"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner"
                    android:entries="@array/report_array"
                    android:prompt="@string/contacttype_prompt" />

                <EditText
                    android:id="@+id/etOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 ./-_'&quot;"
                    android:hint="@string/other"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:textColorHighlight="@color/grey"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/etSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 ./-_'&quot;"
                    android:hint="@string/etsubject"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:textColorHighlight="@color/grey"
                    android:textCursorDrawable="@drawable/cursor_color" />

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etdescription"
                    android:inputType="textMultiLine|textCapSentences"
                    android:lines="5"
                    android:maxLength="750"
                    android:maxLines="14"
                    android:scrollbars="vertical"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/grey"
                    android:textCursorDrawable="@drawable/cursor_color" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/details_button"
                    android:text="@string/submit"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/reportProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

</ScrollView>