<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.lucidsoftworksllc.sabotcommunity.LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:contentDescription="@null"
        android:src="@drawable/logo"
        tools:visibility="gone" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-4dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:padding="0dp"
        android:theme="@style/ProgressBarStyle" />


    <!--android:layout_above="@+id/loginButton"
    android:layout_below="@+id/welcomeBackMessage"-->

    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/afterAnimationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/WelcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/welcomeBackMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/we_re_excited_to_have_you_back"
                android:textColor="@color/overlay_white"
                android:textSize="15sp"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/threeminutewalkthrough"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/new_to_sabot_community_text"
                    android:textAlignment="center"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-2dp"
                    android:text="@string/take_our_3_minute_walk_through_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_link_to_register"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/forgotPassButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email_text_reg"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/colorAccent"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/colorAccent"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="510dp"
                android:background="@drawable/submitbuttonshape"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/login_text"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/loadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Loading..."
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        tools:visibility="gone" />

</RelativeLayout>