<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootPassView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.ForgotPassActivity">


    <RelativeLayout
        android:id="@+id/afterForgotAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/forgotButton"
            android:layout_below="@+id/welcomeBackMessage"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailForgotEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 @."
                android:hint="@string/email_text_reg"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/colorAccent"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameForgotEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/hint_username"
                android:textColor="@color/white"
                android:textColorHint="@color/colorAccent"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/ForgotTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_recovery"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeBackMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ForgotTextView"
            android:layout_marginTop="10dp"
            android:text="@string/input_your_email_and_username_and_we_ll_send_you_a_link_to_reset_your_password"
            android:textColor="@color/overlay_white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/forgotButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/submitbuttonshape"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/recover"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>